Fixing a lot of css styling throughout the project. Adding a no-scrollbar option in the global.css to use with tailwind

--- a/3.0/styles/global.css
+++ b/3.0/styles/global.css
@@ -1,42 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 /**
  * This injects Tailwind's base styles and any base styles registered by
  * plugins.
  */
- @tailwind base;
- /**
+@tailwind base;
+/**
   * This injects Tailwind's component classes and any component classes
   * registered by plugins.
   */
- @tailwind components;
- /**
+@tailwind components;
+/**
   * This injects Tailwind's utility classes and any utility classes registered
   * by plugins.
   */
- @tailwind utilities; 
- /**
+@tailwind utilities;
+/**
   * Use this directive to control where Tailwind injects the hover, focus,
   * responsive, dark mode, and other variants of each class.
   *
   * If omitted, Tailwind will append these classes to the very end of
   * your stylesheet by default.
   */
-  @tailwind variants;
-  /*
+@tailwind variants;
+/*
     Common css component across the project
   */
-  @layer components {
+@layer components {
     .btn-primary {
-      @apply py-2 px-5 bg-violet-500 text-white
+        @apply py-2 px-5 bg-violet-500 text-white;
     }
-  }
-  /* Update base styles for the HTML component */
-  @layer base {
+}
+/* Update base styles for the HTML component */
+@layer base {
     html {
-      @apply w-[100dvw] h-[100dvh] bg-gradient-to-br from-primary to-secondary text-white
+        @apply w-[100dvw] h-[100dvh] bg-gradient-to-br from-primary to-secondary text-white;
     }
 
     body {
-      @apply w-[100dvw] h-[100dvh] font-istok overflow-y-auto overflow-x-hidden
+        @apply w-[100dvw] h-[100dvh] font-istok overflow-y-auto overflow-x-hidden;
     }
-  }
+}
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+}
